# HoudiniEngineForMaya

./: .gitignore  AEAssetTemplate.mel  AEhAssetTemplate.mel  AEhoudiniAssetTemplate.mel  Asset.C  Asset.h  AssetCommand.C  AssetCommand.h  AssetDraw2.C  AssetDraw2.h  AssetInput.C  AssetInput.h  AssetInputAsset.C  AssetInputAsset.h  AssetInputCurve.C  AssetInputCurve.h  AssetInputMesh.C  AssetInputMesh.h  AssetInputParticle.C  AssetInputParticle.h  AssetManager.C  AssetManager.h  AssetNode.C  AssetNode.h  AssetNodeMonitor.C  AssetNodeMonitor.h  AssetNodeOptions.C  AssetNodeOptions.h  AssetSubCommand.C  AssetSubCommand.h  AssetSubCommandLoadAsset.C  AssetSubCommandLoadAsset.h  AssetSubCommandLoadOTL.C  AssetSubCommandLoadOTL.h  AssetSubCommandLockAsset.C  AssetSubCommandLockAsset.h  AssetSubCommandSync.C  AssetSubCommandSync.h  AssetSync.C  AssetSync.h  (+142 more)
cmake/: PluginFiles.cmake
cmake/Modules/: FindHoudiniEngine.cmake  FindMaya.cmake
doc/: Maya_Assets.dox  Maya_Bake.dox  Maya_Code.dox  Maya_Compatibility.dox  Maya_Curve.dox  Maya_Debugging.dox  Maya_Freeze.dox  Maya_GettingStarted.dox  Maya_Group.dox  Maya_Hair.dox  Maya_History.dox  Maya_Inputs.dox  Maya_Install.dox  Maya_Instancing.dox  Maya_Locator.dox  Maya_Material.dox  Maya_Mesh.dox  Maya_Nodes.dox  Maya_Outputs.dox  Maya_Parameters.dox  Maya_Particle.dox  Maya_Scripting.dox  Maya_Session.dox  Maya_Shelves.dox  Maya_Time.dox  Maya_Volume.dox  mainpage.dox
houdini_engine_for_maya/: asset_store.py
https/github.com/decentralizedbloodbank/: Extreme-Learning-Machines
scripts/: AEhoudiniAssetTemplate.mel  AEhoudiniInputCurveTemplate.mel  AEhoudiniInputGeometryTemplate.mel  AEhoudiniInputMergeTemplate.mel  AEhoudiniInputTransformTemplate.mel  houdiniEngineAssetInput.mel  houdiniEngineAssetLibraryManager.mel  houdiniEngineAssetOptions.mel  houdiniEngineAssetSync.mel  houdiniEngineBakeAsset.mel  houdiniEngineCreateUI.mel  houdiniEngineDeleteHistory.mel  houdiniEngineDeleteUI.mel  houdiniEngineFreezeAsset.mel  houdiniEngineHistoryAsset.mel  houdiniEnginePreferences.mel  houdiniEngineRemoveHistory.mel  houdiniEngineSelection.py  houdiniEngineUtils.mel  shelf_Houdini.mel  shelf_HoudiniTools.mel
scripts/houdini_engine_for_maya/: asset_store.py
